# Cortex-XSOAR-Salesforce-Case-Filtering

./: README.md  getSFOwnerTicketsStatus.yml  multi_ticket.py  multi_ticket_new.py  pyproject.toml  single_ticket.py  slack_notify.py
